--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Suggests:
     knitr,
     rmarkdown
 License: GPL (>=2)
+URL: http://github.com/ngreifer/modprobe
+BugReports: http://github.com/ngreifer/modprobe/issues
 Encoding: UTF-8
 LazyData: true
 Date: XXXXXXXX
