--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Maintainer: Noah Greifer <noah@unc.edu>
 Description: Tools for probing interactions in linear regression analysis. 
     Replicates the functions for moderation at http://quantpsy.org/medn.htm. 
     These include calculation, testing, and plotting of simple slopes, and 
-    the Johsnon-Neyman technique for computing significance bounds.
+    the Johnson-Neyman technique for computing significance bounds.
 Depends:
     R (>= 3.1)
 Imports:
