--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,8 @@
 import(ggplot2)
+importFrom("gtools", "permuations")
+importFrom("utils", "data")
+importFrom("stats", "lm", "coef", "vcov", "pt")
+importFrom("grDevices", "col2rgb", "hcl")
 
 export(simple.slopes, sig.region)
 S3method(print, simple.slopes)
